--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -45,6 +45,11 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: name/app
+
+      - name: Get Dockerfile FROM value
+        run: |
+          FROM_VALUE=$(grep -m 1 '^FROM' ../../Dockerfile | awk -F '/' '{print $2}')
+          echo "::set-env name=FROM_VALUE::$FROM_VALUE" 
           
       # https://github.com/docker/build-push-action
       - name: Build and push
@@ -53,7 +58,7 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.FROM_VALUE }} 
           cache-from: type=gha
           cache-to: type=gha,mode=max
           #labels: ${{ steps.meta.outputs.labels }}
